Closes #1646: Portrait images are not cropped correctly in Photo Galleries with Slider Crop style (#1647)

--- a/scss/custom/_photo-gallery.scss
+++ b/scss/custom/_photo-gallery.scss
@@ -59,11 +59,18 @@
   background-color: unset;
 }
 
-.az-gallery-slider-crop .az-gallery-caption {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
+.az-gallery-slider-crop {
+  .az-gallery-image {
+    width: 100%;
+    height: 100%;
+  }
+
+  .az-gallery-caption {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+  }
 }
 
 .az-gallery-modal {
